--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,10 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "chart.js": "^2.9.4",
     "md5": "^2.3.0",
     "react": "^17.0.1",
+    "react-chartjs-2": "^2.10.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
